--- a/requirements.txt
+++ b/requirements.txt
@@ -9,3 +9,6 @@ paramiko==3.3.1
 flask-socketio==5.3.6
 python-socketio==5.10.0
 eventlet==0.33.3
+PyMySQL==1.1.0
+psycopg2-binary==2.9.9
+cryptography==41.0.7
